# control

./: CMakeLists.txt  PID.py  angular_pose.py  control.cpp  control_options.py  control_system.cpp  control_system.py  control_utils.py  controller.cpp  curve_control.py  differential_model.py  fast_position_control.py  main.cpp  package.xml  pose_control.py  pose_line_control.py  position_control.py  relative_position_converter.py  robot_speed_control.py  special_movements.py  speed_converter.py
config/: constants.yaml  control.yaml  conversions.yaml  system.yaml
control/: control.cpp  control.h
include/: ball.h  position_control.h  robot.h
joystick/: joystick.cpp  joystick.h
launch/: planning_node.launch
speed_conversion/: speed_conversion.cpp  speed_conversion.h
strategy/: strategy.cpp  strategy.h
