<?xml version="1.0"?>
<package>
  <name>control</name>
  <version>0.0.0</version>
  <description>The UnBall Robot Soccer Team control package</description>

  <maintainer email="gabriel.sousa@ieee.org">Gabriel Sousa Silva</maintainer>


  <license>MIT</license>

  <url type="website">https://github.com/unball/control</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
